objects/CMPL123CME__Clinical_Investigation__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Assess_Relationship_to_Investi_device__c</fullName>
        <description>Assessment of Relationship to Investigational Device</description>
        <inlineHelpText>Assessment of Relationship to Investigational Device</inlineHelpText>
        <label>Assess. Relationship to Investi. device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Possibly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Assessment_of_Relationship_to_Procedure__c</fullName>
        <description>Assessment of Relationship
to Procedure</description>
        <inlineHelpText>Assessment of Relationship
to Procedure</inlineHelpText>
        <label>Assessment of Relationship to Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Possibly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__CIP_Number__c</fullName>
        <description>CIP Number</description>
        <inlineHelpText>CIP Number</inlineHelpText>
        <label>CIP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_Person__c</fullName>
        <description>Contact Person name, Address, Email, Telephone Number</description>
        <inlineHelpText>Contact Person name, Address, Email, Telephone Number</inlineHelpText>
        <label>Contact Person Full Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Sponsor_received_Report_of_SAE__c</fullName>
        <description>Date Sponsor received Report of SAE</description>
        <inlineHelpText>Date Sponsor received Report of SAE</inlineHelpText>
        <label>Date Sponsor received Report of SAE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Event_Onset__c</fullName>
        <description>Date of Event Onset</description>
        <inlineHelpText>Date of Event Onset</inlineHelpText>
        <label>Date of Event Onset</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Event_Resolution__c</fullName>
        <description>Date of Event Resolution</description>
        <inlineHelpText>Date of Event Resolution</inlineHelpText>
        <label>Date of Event Resolution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Procedure_First_Use__c</fullName>
        <description>Date of Procedure/ First Use</description>
        <inlineHelpText>Date of Procedure/ First Use</inlineHelpText>
        <label>Date of Procedure/ First Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Report__c</fullName>
        <description>Date of Report</description>
        <inlineHelpText>Date of Report</inlineHelpText>
        <label>Date of Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Description_of_event__c</fullName>
        <description>Description of event</description>
        <inlineHelpText>Description of event</inlineHelpText>
        <label>Description of event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Type__c</fullName>
        <description>Device Type</description>
        <inlineHelpText>Device Type</inlineHelpText>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EUDAMED_ID__c</fullName>
        <description>EUDAMED - ID</description>
        <inlineHelpText>EUDAMED - ID</inlineHelpText>
        <label>EUDAMED - ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_Organ_System__c</fullName>
        <description>Event: Organ System</description>
        <inlineHelpText>Event: Organ System</inlineHelpText>
        <label>Event: Organ System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_Status__c</fullName>
        <description>Event Status:</description>
        <inlineHelpText>Event Status:</inlineHelpText>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Resolved with Sequelae</fullName>
                </value>
                <value>
                    <fullName>Ongoing/Death</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__MS_NCA_Reference_Numbers_for_all_partic__c</fullName>
        <description>MS+NCA Reference Numbers for all participating Countries</description>
        <inlineHelpText>MS+NCA Reference Numbers for all participating Countries</inlineHelpText>
        <label>MS+NCA Ref. Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_of_Invest_Devices_used_to_date__c</fullName>
        <description>No. of Invest. Devices used to date</description>
        <inlineHelpText>No. of Invest. Devices used to date</inlineHelpText>
        <label>No. of Invest. Devices used to date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_of_Patients_enrolled_to_date__c</fullName>
        <description>Number of Patients enrolled to date(date of report)</description>
        <inlineHelpText>Number of Patients enrolled to date(date of report)</inlineHelpText>
        <label>No. of Patients enrolled to date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_ID_Code__c</fullName>
        <description>Patient ID Code</description>
        <inlineHelpText>Patient ID Code</inlineHelpText>
        <label>Patient ID Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reference_Member_State__c</fullName>
        <description>Reference Member State</description>
        <inlineHelpText>Reference Member State</inlineHelpText>
        <label>Reference Member State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Store_Old_Field_Values__c</fullName>
        <description>Old Field Values</description>
        <inlineHelpText>Store Old Field Values</inlineHelpText>
        <label>Old Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Study_Center__c</fullName>
        <description>Study Center</description>
        <inlineHelpText>Study Center</inlineHelpText>
        <label>Study Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Treatment_Arm__c</fullName>
        <description>Treatment Arm</description>
        <inlineHelpText>Treatment Arm</inlineHelpText>
        <label>Treatment Arm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigational Device</fullName>
                </value>
                <value>
                    <fullName>Control Group</fullName>
                </value>
                <value>
                    <fullName>Blinded</fullName>
                </value>
                <value>
                    <fullName>N.A.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Unanticipated_SADE_Yes_No__c</fullName>
        <description>Unanticipated SADE Yes/No</description>
        <inlineHelpText>Unanticipated SADE Yes/No</inlineHelpText>
        <label>Unanticipated SADE Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__action_treatment_patient_outcome__c</fullName>
        <description>action/ treatment/patient outcome</description>
        <inlineHelpText>action/ treatment/patient outcome</inlineHelpText>
        <label>action/ treatment/patient outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clinical Investigation (Deprecated)</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__EUDAMED_ID__c</columns>
        <columns>CMPL123CME__CIP_Number__c</columns>
        <columns>CMPL123CME__Date_of_Report__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title of Clinical Investigation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>